# chess-rust

./: Cargo.toml  LICENSE  README.md
benches/: benchmark_alpha_beta_search.rs  benchmark_move_generation.rs
src/: board.rs  color.rs  lib.rs  main.rs  match.rs  move.rs  piece.rs  tile.rs
src/ai/: ai.rs  alpha_beta_ai.rs  minimax_ai.rs  mod.rs
src/chess/: board.rs  chess_move.rs  color.rs  evaluation.rs  game_result.rs  mod.rs  move_generator.rs  piece.rs  tile.rs
src/game/: game.rs
