[package]
name = "chess-rust"
version = "0.1.0"
authors = ["Malte Kauranen <malte.kauranen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark_move_generation"
harness = false
[[bench]]
name = "benchmark_alpha_beta_search"
harness = false